<resources>
    <string name="app_name">To Do List</string>

    <!--LOGIN AND REGISTRATION STRINGS -->
    <string name="email_field_reg">Електронна пошта</string>
    <string name="password_field_reg">Пароль</string>
    <string name="registration_button">Зареєструватись</string>
    <string name="login_button">Увійти</string>
    <string name="registration_text">Я новий користувач ></string>
    <string name="login_recovery_password_text">Забули пароль?</string>

    <!--SETTINGS STRINGS -->
    <string name="settings_edit_email_text">Змінити email</string>
    <string name="settings_edit_email_edit_text">Новий email</string>
    <string name="settings_save_email_button_txt">Зберегти</string>
    <string name="settings_edit_password_text">Змінити пароль</string>
    <string name="settings_edit_password_edit_text">Новий пароль</string>
    <string name="settings_save_password_button_txt">Зберегти</string>
    <string name="settings_logout_button">Вийти з акаунту</string>
    <string name="settings_check_password">Повторіть пароль</string>

    <!--ADD NOTE STRINGS-->
    <string name="add_node_name_action_text">Назва події</string>
    <string name="add_node_name_action_edit_text">Назва</string>
    <string name="add_node_description_text">Опис</string>
    <string name="add_node_description_edit_text">Опис</string>
    <string name="add_node_date_text">Оберіть дату</string>
    <string name="add_node_time_text">Оберіть час</string>
    <string name="add_node_friend_text">Учасник</string>
    <string name="add_node_category_text">Категорія</string>
    <string name="add_node_add_file_button_text">+ Додати файл
(до 20 мб)</string>
    <string name="add_node_add_node_button_text">Додати подію</string>
    <string name="add_node_cancel_button_text">Скасувати</string>
    <string name="add_node_friend_action_edit_text">Оберіть учасника</string>
    <string name="add_note_toolbar_title">Нова подія</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="calendar_fragment_text">Ваші cправи</string>
    <string name="friends_fragment_tool_text">Список учасників</string>
    <string name="settings_fragment_tool_text">Налаштування</string>

    <!--NOTE VIEW STRINGS-->
    <string name="note_view_time_text">00:00</string>
    <string name="note_view_date_text">21.12.2000</string>
    <string name="note_view_title_text">Title</string>
    <string name="note_view_description_text">Description text</string>
    <string name="note_view_friends_title_text">Учасники</string>
    <string name="note_view_friends_list_text">Не обрано</string>
    <string name="note_view_category_title_text">Категорія</string>
    <string name="note_view_category_list_text">Не обрано</string>
    <string name="note_view_file_title">Файл</string>
    <string name="note_view_file_name_text">Не обрано</string>
    <string name="note_view_edit_button_title_text">Редагувати</string>
    <string name="note_view_delete_button_title_text">Видалити</string>
    <string name="note_view_back_button_title_text">Назад</string>
    <string name="note_view_toolbar_title_text">Перегляд події</string>

    <!--ADD FRIEND DIALOG-->
    <string name="add_friend_dialog_title_text">Додати нового учасника</string>
    <string name="add_friend_set_email_text">Введіть email учасника</string>
    <string name="add_friend_set_email_edit_text">Електронна пошта</string>
    <string name="add_friend_cancel_text">Скасувати</string>
    <string name="add_friend_add_friend_text">Додати</string>

    <!--RECOVERY DIALOG-->
    <string name="recovery_dialog_title_text">Відновити пароль</string>
    <string name="recovery_set_email_text">Введіть email</string>
    <string name="recovery_set_email_edit_text">Електронна пошта</string>
    <string name="recovery_cancel_text">Скасувати</string>
    <string name="recovery_recovery_text">Отримати листа</string>

    <!--EDIT NOTE ACTIVITY-->
    <string name="edit_note_save_button">Зберегти</string>

</resources>