<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.login.LoginLayout"
    android:background="@color/background_color"
    android:padding="16dp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextTextEmailAddressLogin"

        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_above="@id/editTextTextPasswordLogin"
        android:layout_centerHorizontal="true"
        android:ems="10"
        app:boxCornerRadiusTopEnd="5dp"
        app:boxCornerRadiusTopStart="5dp"
        app:boxBackgroundColor="@color/white"
        android:theme="@style/MyTextInputLayout_overlay"


        android:fontFamily="@font/rubikregular"
        android:hint="@string/email_field_reg"
        android:inputType="textEmailAddress" >

    <com.google.android.material.textfield.TextInputEditText
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/rubikregular" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextTextPasswordLogin"
        android:layout_width="match_parent"
        app:boxCornerRadiusTopEnd="5dp"
        app:boxCornerRadiusTopStart="5dp"
        app:boxBackgroundColor="@color/white"
        android:theme="@style/MyTextInputLayout_overlay"


        android:layout_height="60dp"
        android:layout_centerInParent="true"
        android:ems="10"
        android:fontFamily="@font/rubikregular"
        android:hint="@string/password_field_reg"
        android:inputType="textPassword"  >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rubikregular" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/login_btn"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/editTextTextPasswordLogin"
        android:layout_marginTop="28dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/rounded_corner"
        android:contentDescription="@string/registration_button"
        android:fontFamily="@font/rubikregular"
        android:text="@string/login_button"
        android:textAllCaps="false"
        android:textColor="@color/color_accent"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_btn"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/rubikregular"
        android:text="@string/registration_text" />

</RelativeLayout>