<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.ToDoList"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <!--<include layout="@layout/toolbar"
            android:id="@+id/toolbar_note_view"
            />-->

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="16dp"
            android:background="@color/background_color"
            android:paddingTop="16dp"
            android:paddingRight="16dp"
            >

            <RelativeLayout
                android:id="@+id/note_view_data_time_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:textColor="@color/color_accent"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="8dp"
                    android:id="@+id/note_view_date_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:fontFamily="@font/rubikregular"
                    android:text="@string/note_view_date_text"
                    android:textSize="14sp" />

                <TextView
                    android:textColor="@color/color_accent"
                    android:id="@+id/note_view_time_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:fontFamily="@font/rubikregular"
                    android:text="@string/note_view_time_text"
                    android:textSize="14sp" />

            </RelativeLayout>

            <TextView
                android:id="@+id/note_view_title_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/note_view_data_time_layout"
                android:layout_marginBottom="6dp"
                android:fontFamily="@font/rubikmedium"
                android:text="@string/note_view_title_text"
                android:textColor="@color/color_accent"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/note_view_description_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/note_view_title_text_view"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/rubikregular"
                android:text="@string/note_view_description_text"
                android:textColor="@color/color_accent"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/note_view_friends_title_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/note_view_description_text_view"
                android:layout_marginBottom="3dp"
                android:fontFamily="@font/rubikmedium"
                android:text="@string/note_view_friends_title_text"
                android:textColor="@color/color_accent"
                android:textSize="16sp" />

            <TextView
                android:textSize="16sp"
                android:textColor="@color/color_accent"
                android:layout_marginBottom="8dp"
                android:id="@+id/note_view_friends_list_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/note_view_friends_title_text_view"
                android:fontFamily="@font/rubikregular"
                android:text="@string/note_view_friends_list_text" />

            <TextView
                android:textColor="@color/color_accent"
                android:textSize="16sp"
                android:layout_marginBottom="3dp"
                android:id="@+id/note_view_category_title_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/note_view_friends_list_text_view"
                android:fontFamily="@font/rubikmedium"
                android:text="@string/note_view_category_title_text" />

            <TextView
                android:textSize="16sp"
                android:textColor="@color/color_accent"
                android:layout_marginBottom="8dp"
                android:id="@+id/note_view_category_list_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/note_view_category_title_text_view"
                android:fontFamily="@font/rubikregular"
                android:text="@string/note_view_category_list_text" />

            <Button

                android:textSize="16sp"
                style="?android:attr/borderlessButtonStyle"
                android:textAllCaps="false"
                android:letterSpacing="0"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/rubikregular"
                android:textColor="@color/color_accent"
                android:background="@drawable/rounded_corner"
                android:id="@+id/note_view_edit_button"
                android:onClick="editNote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/note_view_category_list_file_view"
                android:text="@string/note_view_edit_button_title_text" />

            <TextView
                android:textSize="16sp"
                android:textColor="@color/color_accent"
                android:layout_marginBottom="3dp"
                android:fontFamily="@font/rubikmedium"
                android:id="@+id/textView5"
                android:layout_below="@+id/note_view_category_list_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Файл" />

            <TextView
                android:textSize="16sp"
                android:textColor="@color/color_accent"
                android:layout_marginBottom="40dp"
                android:id="@+id/note_view_category_list_file_view"
                android:fontFamily="@font/rubikregular"
                android:layout_below="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Файл не обрано" />


            <Button
                android:layout_marginBottom="3dp"
                android:textSize="16sp"
                android:textAllCaps="false"
                style="?android:attr/borderlessButtonStyle"
                android:textColor="@color/color_accent"
                android:fontFamily="@font/rubikregular"
                android:letterSpacing="0"
                android:onClick="deleteFromFirebase"

                android:background="@drawable/rounded_corner"
                android:id="@+id/note_view_delete_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/note_view_edit_button"
                android:text="@string/note_view_delete_button_title_text" />

            <TextView

                android:id="@+id/note_view_cancel_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/note_view_delete_button"
                android:layout_centerHorizontal="true"
                android:onClick="cancel"
                android:text="@string/note_view_back_button_title_text" />



        </RelativeLayout>

    </RelativeLayout>


</ScrollView>