<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".auth.passrecovery.Recovery"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:theme="@style/Theme.ToDoList"
    android:background="@color/items_color">

    <TextView
        android:id="@+id/recovery_title_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:fontFamily="@font/rubikmedium"
        android:text="@string/recovery_dialog_title_text"
        android:textColor="@color/color_accent"
        android:textSize="20sp" />

    <TextView

        android:id="@+id/recovery_set_email_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@id/recovery_title_text_view"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/rubikregular"
        android:text="@string/recovery_set_email_text"
        android:textColor="@color/color_accent"
        android:textSize="14sp" />

<com.google.android.material.textfield.TextInputLayout
    android:id="@+id/recovery_set_email_layout"

    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:layout_below="@id/recovery_set_email_text_view"
    android:layout_centerHorizontal="true"
    android:ems="10"
    app:boxCornerRadiusTopEnd="5dp"
    app:boxCornerRadiusTopStart="5dp"
    app:boxBackgroundColor="@color/white"
    android:theme="@style/MyTextInputLayout_overlay"


    android:fontFamily="@font/rubikregular"
    android:hint="@string/email_field_reg"
    android:inputType="textEmailAddress" >

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/recovery_set_email_edit_text"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/rubikregular"
        android:inputType="textEmailAddress"/>

</com.google.android.material.textfield.TextInputLayout>


</RelativeLayout>