<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:background="@color/items_color">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/add_friend_title_text_view"
        android:text="@string/add_friend_dialog_title_text"
        android:layout_marginBottom="8dp"
        android:textSize="20sp"
        android:textColor="@color/color_accent"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/add_friend_set_email_text_view"
        android:text="@string/add_friend_set_email_text"
        android:layout_below="@id/add_friend_title_text_view"
        android:layout_marginBottom="8dp"
        android:textSize="14sp"
        android:textColor="@color/color_accent"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/add_friend_set_email_layout"

        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/add_friend_set_email_text_view"
        android:layout_centerHorizontal="true"
        android:ems="10"
        app:boxCornerRadiusTopEnd="5dp"
        app:boxCornerRadiusTopStart="5dp"
        app:boxBackgroundColor="@color/white"
        android:theme="@style/MyTextInputLayout_overlay"


        android:fontFamily="@font/rubikregular"
        android:hint="@string/email_field_reg"
        android:inputType="textEmailAddress" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/add_friend_set_email_edit_text"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rubikregular"
            android:inputType="textEmailAddress"/>

    </com.google.android.material.textfield.TextInputLayout>

    <!--<Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/add_friend_add_friend_text_view"
        android:layout_below="@id/add_friend_set_email_layout"
        android:layout_alignParentRight="true"
        android:text="@string/add_friend_add_friend_text"
        android:layout_marginLeft="20dp"
        android:textSize="15sp"
        android:textColor="@color/color_accent"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/add_friend_cancel_text_view"
        android:layout_below="@id/add_friend_set_email_layout"
        android:layout_toLeftOf="@id/add_friend_add_friend_text_view"
        android:text="@string/add_friend_cancel_text"
        android:textSize="15sp"
        android:textColor="@color/color_accent"
        />-->

</RelativeLayout>